language/move-lang/tests/move_check/typing/mutate_non_ref.exp
error: 

   ┌── tests/move_check/typing/mutate_non_ref.move:7:10 ───
   │
 7 │         *u = 1;
   │          ^ Invalid mutation. Expected a mutable reference
   ·
 6 │         let u = 0;
   │             - The type: integer
   ·
 7 │         *u = 1;
   │          - Is not compatible with: '&mut _'
   │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:10:10 ───
    │
 10 │         *s = S { f: 0 };
    │          ^ Invalid mutation. Expected a mutable reference
    ·
  9 │         let s = S { f: 0 };
    │                 ---------- The type: '0x8675309::M::S'
    ·
 10 │         *s = S { f: 0 };
    │          - Is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:11:10 ───
    │
 11 │         *s.f = 0;
    │          ^^^ Invalid mutation. Expected a mutable reference
    ·
  2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 11 │         *s.f = 0;
    │          --- Is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:14:10 ───
    │
 14 │         *s_ref.f = 0;
    │          ^^^^^^^ Invalid mutation. Expected a mutable reference
    ·
  2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 14 │         *s_ref.f = 0;
    │          ------- Is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:17:10 ───
    │
 17 │         *x.s = S { f: 0 };
    │          ^^^ Invalid mutation. Expected a mutable reference
    ·
  3 │     struct X { s: S }
    │                   - The type: '0x8675309::M::S'
    ·
 17 │         *x.s = S { f: 0 };
    │          --- Is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:17:10 ───
    │
 17 │         *x.s = S { f: 0 };
    │          ^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
    ·
  3 │     struct X { s: S }
    │                   - The type: '0x8675309::M::S'
    ·
  2 │     struct S { f: u64 }
    │            - Is declared as a non-implicitly copyable type here
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:18:10 ───
    │
 18 │         *x.s.f = 0;
    │          ^^^^^ Invalid mutation. Expected a mutable reference
    ·
  2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 18 │         *x.s.f = 0;
    │          ----- Is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:21:10 ───
    │
 21 │         *x_ref.s = S{ f: 0 };
    │          ^^^^^^^ Invalid mutation. Expected a mutable reference
    ·
  3 │     struct X { s: S }
    │                   - The type: '0x8675309::M::S'
    ·
 21 │         *x_ref.s = S{ f: 0 };
    │          ------- Is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:21:10 ───
    │
 21 │         *x_ref.s = S{ f: 0 };
    │          ^^^^^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
    ·
  3 │     struct X { s: S }
    │                   - The type: '0x8675309::M::S'
    ·
  2 │     struct S { f: u64 }
    │            - Is declared as a non-implicitly copyable type here
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:22:10 ───
    │
 22 │         *x_ref.s.f = 0;
    │          ^^^^^^^^^ Invalid mutation. Expected a mutable reference
    ·
  2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 22 │         *x_ref.s.f = 0;
    │          --------- Is not compatible with: '&mut _'
    │

